feat(test): test concept

--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,6 @@
     <title>Service Mocker</title>
 </head>
 <body>
-    <script src="app.js"></script>
+    <script src="modern.js"></script>
 </body>
 </html>
